--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://www.dorpsedeugniet.com/">
 
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/images/favicon.png">
+
     <!-- Open Graph for Social Media -->
     <meta property="og:title" content="Dorpsedeugniet - Artesian Beer Brewing in the Netherlands">
     <meta property="og:description" content="Experience the finest artesian beer from Reeuwijk, Netherlands. Dorpsedeugniet offers small-batch, hand-crafted beers with unique flavors for a global audience.">
@@ -67,6 +70,40 @@
     }
     </script>
 
+    <!-- Breadcrumb Schema -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+            {
+                "@type": "ListItem",
+                "position": 1,
+                "name": "Home",
+                "item": "https://www.dorpsedeugniet.com/"
+            },
+            {
+                "@type": "ListItem",
+                "position": 2,
+                "name": "Our Beers",
+                "item": "https://www.dorpsedeugniet.com/#beers"
+            },
+            {
+                "@type": "ListItem",
+                "position": 3,
+                "name": "Brewing Process",
+                "item": "https://www.dorpsedeugniet.com/#process"
+            },
+            {
+                "@type": "ListItem",
+                "position": 4,
+                "name": "Contact",
+                "item": "https://www.dorpsedeugniet.com/#contact"
+            }
+        ]
+    }
+    </script>
+
     <style>
         body {
             font-family: 'Georgia', serif;
@@ -106,6 +143,21 @@
 
         nav a:hover, nav a:focus {
             background-color: #4a2d1f;
+        }
+
+        .breadcrumbs {
+            padding: 0.5rem 1rem;
+            background-color: #f9f9f9;
+            font-size: 0.9rem;
+        }
+
+        .breadcrumbs a {
+            color: #5c3a29;
+            text-decoration: none;
+        }
+
+        .breadcrumbs a:hover {
+            text-decoration: underline;
         }
 
         .hero {
@@ -203,11 +255,78 @@
             loading: "lazy";
         }
 
+        .social-share {
+            margin: 1rem 0;
+            text-align: center;
+        }
+
+        .social-share a {
+            margin: 0 0.5rem;
+            text-decoration: none;
+            color: #5c3a29;
+            font-size: 1.2rem;
+        }
+
+        .social-share a:hover {
+            color: #e67e22;
+        }
+
+        .newsletter {
+            background-color: #f9f9f9;
+            padding: 2rem;
+            text-align: center;
+            margin: 2rem 0;
+        }
+
+        .newsletter h3 {
+            font-size: 1.8rem;
+            margin-bottom: 1rem;
+            color: #5c3a29;
+        }
+
+        .newsletter form {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+        }
+
+        .newsletter input {
+            padding: 0.6rem;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 1rem;
+            width: 250px;
+        }
+
+        .newsletter button {
+            background-color: #e67e22;
+            color: white;
+            padding: 0.6rem 1.5rem;
+            border: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .newsletter button:hover {
+            background-color: #d35400;
+        }
+
         footer {
             background-color: #5c3a29;
             color: white;
             text-align: center;
             padding: 1rem 0;
+        }
+
+        footer a {
+            color: #e67e22;
+            text-decoration: none;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
         }
 
         .contact-form {
@@ -287,6 +406,13 @@
             .contact-form button {
                 padding: 0.7rem 1rem;
             }
+            .newsletter form {
+                flex-direction: column;
+                gap: 0.5rem;
+            }
+            .newsletter input {
+                width: 100%;
+            }
         }
 
         @media (max-width: 480px) {
@@ -316,6 +442,9 @@
             .contact-form button {
                 padding: 0.6rem 1rem;
                 font-size: 0.9rem;
+            }
+            .newsletter h3 {
+                font-size: 1.5rem;
             }
         }
 
@@ -350,45 +479,67 @@
         <a href="#contact">Contact</a>
     </nav>
 
+    <div class="breadcrumbs" aria-label="Breadcrumb navigation">
+        <a href="#home">Home</a> &gt; <a href="#beers">Our Beers</a> &gt; <a href="#process">Brewing Process</a> &gt; <a href="#contact">Contact</a>
+    </div>
+
     <main>
         <section id="home" class="hero" aria-label="Hero section">
             <h2>Artesian Beer Brewing in Reeuwijk, Netherlands</h2>
-            <p>Experience the rich flavors of Dorpsedeugniet’s hand-crafted beers, brewed with passion and tradition in the heart of the Netherlands.</p>
+            <p>Experience the rich flavors of Dorpsedeugniet’s hand-crafted beers, brewed with passion and tradition in the heart of the Netherlands. Our small-batch brewing process in Reeuwijk ensures every sip is a taste of Dutch craftsmanship.</p>
             <a href="#beers"><button aria-label="Discover our beers">Discover Our Beers</button></a>
         </section>
 
         <section id="beers" class="content-section">
             <h2>Our Exceptional Artesian Beer Brewing Process</h2>
-            <p>We believe in quality over quantity. Our small-batch brewing process in Reeuwijk ensures every beer is crafted with the finest ingredients and meticulous attention to detail.</p>
+            <p>We believe in quality over quantity. Our small-batch brewing process in Reeuwijk ensures every beer is crafted with the finest ingredients and meticulous attention to detail, making Dorpsedeugniet a standout in artesian beer brewing in the Netherlands.</p>
 
             <div class="grid-container">
                 <div class="grid-item">
                     <img src="beer-with-hops.jpg" alt="Glass of beer with hops for Dorpsedeugniet ingredients" loading="lazy">
                     <h3>Finest Ingredients</h3>
-                    <p>We source only the best hops, malts, and yeast to create beers of exceptional quality.</p>
+                    <p>We source only the best hops, malts, and yeast to create beers of exceptional quality, ensuring every bottle reflects the rich heritage of Dutch brewing.</p>
                 </div>
                 <div class="grid-item">
                     <img src="brewing-scene.jpg" alt="Brewing scene with beer and wheat at Dorpsedeugniet" loading="lazy">
                     <h3>Expert Brewing</h3>
-                    <p>Our brewers use time-honored techniques and modern innovation to craft unique and flavorful beers.</p>
+                    <p>Our brewers use time-honored techniques and modern innovation to craft unique and flavorful beers, blending tradition with creativity in Reeuwijk.</p>
                 </div>
                 <div class="grid-item">
                     <img src="beer-aging-scene.jpg" alt="Beer aging scene with wheat at Dorpsedeugniet" loading="lazy">
                     <h3>Careful Aging</h3>
-                    <p>We allow our beers to mature, developing their full potential and complex flavor profiles.</p>
+                    <p>We allow our beers to mature, developing their full potential and complex flavor profiles, a hallmark of artesian beer brewing in the Netherlands.</p>
                 </div>
+            </div>
+
+            <!-- Social Sharing Buttons -->
+            <div class="social-share">
+                <p>Share this page:</p>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.dorpsedeugniet.com/" target="_blank" aria-label="Share on Facebook">Facebook</a>
+                <a href="https://twitter.com/intent/tweet?url=https://www.dorpsedeugniet.com/&text=Discover the finest artesian beer brewing in the Netherlands with Dorpsedeugniet!" target="_blank" aria-label="Share on Twitter">Twitter</a>
+                <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.dorpsedeugniet.com/" target="_blank" aria-label="Share on LinkedIn">LinkedIn</a>
             </div>
         </section>
 
         <section id="process" class="content-section">
             <h2>The Dorpsedeugniet Brewing Process in the Netherlands</h2>
-            <p>From selecting the finest ingredients to the careful aging of our beers, every step of our process is handled with meticulous care and dedication in Reeuwijk, Netherlands.</p>
-            <p>Learn more about our <a href="#beers">artesian brewing techniques</a> and what makes our beers stand out.</p>
+            <p>From selecting the finest ingredients to the careful aging of our beers, every step of our process is handled with meticulous care and dedication in Reeuwijk, Netherlands. Our artesian brewing techniques ensure that each beer captures the essence of Dutch tradition while offering a modern twist for beer enthusiasts worldwide.</p>
+            <p>Learn more about our <a href="#beers">artesian brewing techniques</a> and what makes our beers stand out. Interested in visiting us? <a href="#contact">Get in touch</a> to arrange a tasting in Reeuwijk!</p>
+        </section>
+
+        <!-- Newsletter Signup Section -->
+        <section class="newsletter">
+            <h3>Stay Updated with Dorpsedeugniet</h3>
+            <p>Join our newsletter to receive updates on new beer releases, events in Reeuwijk, and exclusive offers for artesian beer lovers.</p>
+            <form action="mailto:jaspervdz@me.com" method="post" enctype="text/plain">
+                <input type="email" name="email" placeholder="Enter your email" required aria-required="true">
+                <button type="submit">Subscribe</button>
+            </form>
         </section>
 
         <section id="contact" class="content-section">
             <h2>Contact Dorpsedeugniet</h2>
-            <p>Questions about our artesian beers? Reach out to us!</p>
+            <p>Questions about our artesian beers? Interested in visiting Reeuwijk for a tasting? Reach out to us!</p>
             <form class="contact-form" action="mailto:jaspervdz@me.com" method="post" enctype="text/plain" aria-label="Contact form">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required aria-required="true" placeholder="Enter your name">
@@ -406,7 +557,7 @@
 
     <footer>
         <p>© 2025 Dorpsedeugniet. All rights reserved.</p>
-        <p><a href="/sitemap.xml">Sitemap</a> | <a href="/privacy-policy">Privacy Policy</a></p>
+        <p><a href="/sitemap.xml">Sitemap</a> | <a href="/privacy-policy.html">Privacy Policy</a></p>
     </footer>
 
 </body>
