--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#d2b48c">
     <title>Dorpsedeugniet - Artesian Beer Brewing in the Netherlands | Reeuwijk Small Batch</title>
     <meta name="description" content="Discover Dorpsedeugniet, the finest artesian beer brewing in the Netherlands. Hand-crafted in Reeuwijk with premium ingredients, our small-batch beers offer unique, rich flavors for beer lovers worldwide.">
     <meta name="keywords" content="artesian beer brewing, Dutch beer, Netherlands beer, Reeuwijk beer, small batch brewing, craft beer, artisan beer, premium beer, Dorpsedeugniet, beer tasting">
@@ -32,7 +33,10 @@
     <link rel="alternate" href="https://www.dorpsedeugniet.com/" hreflang="x-default" />
 
     <!-- Preload Critical Resources -->
-    <link rel="preload" href="dutch-canal-landscape.jpg" as="image">
+    <link rel="preload" href="/images/dutch-canal-landscape.jpg" as="image">
+
+    <!-- External CSS -->
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- Structured Data for SEO -->
     <script type="application/ld+json">
@@ -45,520 +49,4 @@
         "logo": "https://www.dorpsedeugniet.com/images/logo.png",
         "address": {
             "@type": "PostalAddress",
-            "addressLocality": "Reeuwijk",
-            "addressCountry": "NL"
-        },
-        "contactPoint": {
-            "@type": "ContactPoint",
-            "email": "jaspervdz@me.com",
-            "contactType": "Customer Service"
-        },
-        "sameAs": [
-            "https://www.facebook.com/dorpsedeugniet",
-            "https://www.instagram.com/dorpsedeugniet",
-            "https://www.twitter.com/dorpsedeugniet"
-        ],
-        "makesOffer": {
-            "@type": "Offer",
-            "itemOffered": {
-                "@type": "Product",
-                "name": "Artesian Dutch Beer",
-                "description": "Small-batch artesian beer brewed in Reeuwijk, Netherlands, using premium ingredients.",
-                "category": "Craft Beer"
-            }
-        }
-    }
-    </script>
-
-    <!-- Breadcrumb Schema -->
-    <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "BreadcrumbList",
-        "itemListElement": [
-            {
-                "@type": "ListItem",
-                "position": 1,
-                "name": "Home",
-                "item": "https://www.dorpsedeugniet.com/"
-            },
-            {
-                "@type": "ListItem",
-                "position": 2,
-                "name": "Our Beers",
-                "item": "https://www.dorpsedeugniet.com/#beers"
-            },
-            {
-                "@type": "ListItem",
-                "position": 3,
-                "name": "Brewing Process",
-                "item": "https://www.dorpsedeugniet.com/#process"
-            },
-            {
-                "@type": "ListItem",
-                "position": 4,
-                "name": "Contact",
-                "item": "https://www.dorpsedeugniet.com/#contact"
-            }
-        ]
-    }
-    </script>
-
-    <style>
-        body {
-            font-family: 'Georgia', serif;
-            margin: 0;
-            padding: 0;
-            color: #333;
-            line-height: 1.6;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background-color: #d2b48c;
-            padding: 1rem;
-            text-align: center;
-        }
-
-        header h1 {
-            margin: 0;
-            font-size: clamp(1.8rem, 5vw, 2.8rem);
-            color: #5c3a29;
-        }
-
-        nav {
-            background-color: #5c3a29;
-            padding: 0.5rem 0;
-        }
-
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 0.5rem 1rem;
-            margin: 0.2rem;
-            border-radius: 5px;
-            display: inline-block;
-            transition: background-color 0.3s ease;
-        }
-
-        nav a:hover, nav a:focus {
-            background-color: #4a2d1f;
-        }
-
-        .breadcrumbs {
-            padding: 0.5rem 1rem;
-            background-color: #f9f9f9;
-            font-size: 0.9rem;
-        }
-
-        .breadcrumbs a {
-            color: #5c3a29;
-            text-decoration: none;
-        }
-
-        .breadcrumbs a:hover {
-            text-decoration: underline;
-        }
-
-        .hero {
-            background-image: url('dutch-canal-landscape.jpg');
-            background-size: cover;
-            background-position: center;
-            color: white;
-            text-align: center;
-            padding: clamp(100px, 20vw, 250px) 1rem;
-            position: relative;
-        }
-
-        .hero::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.6);
-        }
-
-        .hero * {
-            position: relative;
-            z-index: 1;
-        }
-
-        .hero h2 {
-            font-size: clamp(2rem, 6vw, 3.5rem);
-            margin-bottom: 1rem;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
-        }
-
-        .hero p {
-            font-size: clamp(1rem, 3vw, 1.3rem);
-            max-width: 800px;
-            margin: 0 auto 1.5rem;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
-        }
-
-        .hero button {
-            background-color: #e67e22;
-            color: white;
-            padding: 0.8rem 1.5rem;
-            border: none;
-            border-radius: 5px;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .hero button:hover, .hero button:focus {
-            background-color: #d35400;
-        }
-
-        .content-section {
-            padding: 3rem 1rem;
-            text-align: center;
-            max-width: 1200px;
-            margin: 0 auto;
-            background-color: white;
-        }
-
-        .content-section h2, .content-section h3 {
-            font-size: clamp(1.5rem, 4vw, 2.4rem);
-            margin-bottom: 1rem;
-            color: #5c3a29;
-        }
-
-        .content-section p {
-            font-size: clamp(1rem, 2.5vw, 1.2rem);
-            max-width: 800px;
-            margin: 0 auto 1.5rem;
-        }
-
-        .grid-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1rem;
-            padding: 0 1rem;
-        }
-
-        .grid-item {
-            background-color: #f9f9f9;
-            padding: 1.5rem;
-            border-radius: 8px;
-            text-align: left;
-        }
-
-        .grid-item img {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 1rem;
-            border-radius: 5px;
-            loading: "lazy";
-        }
-
-        .social-share {
-            margin: 1rem 0;
-            text-align: center;
-        }
-
-        .social-share a {
-            margin: 0 0.5rem;
-            text-decoration: none;
-            color: #5c3a29;
-            font-size: 1.2rem;
-        }
-
-        .social-share a:hover {
-            color: #e67e22;
-        }
-
-        .newsletter {
-            background-color: #f9f9f9;
-            padding: 2rem;
-            text-align: center;
-            margin: 2rem 0;
-        }
-
-        .newsletter h3 {
-            font-size: 1.8rem;
-            margin-bottom: 1rem;
-            color: #5c3a29;
-        }
-
-        .newsletter form {
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-        }
-
-        .newsletter input {
-            padding: 0.6rem;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 1rem;
-            width: 250px;
-        }
-
-        .newsletter button {
-            background-color: #e67e22;
-            color: white;
-            padding: 0.6rem 1.5rem;
-            border: none;
-            border-radius: 5px;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        .newsletter button:hover {
-            background-color: #d35400;
-        }
-
-        footer {
-            background-color: #5c3a29;
-            color: white;
-            text-align: center;
-            padding: 1rem 0;
-        }
-
-        footer a {
-            color: #e67e22;
-            text-decoration: none;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        .contact-form {
-            max-width: 600px;
-            margin: 1.5rem auto;
-            text-align: left;
-            padding: 0 1rem;
-        }
-
-        .contact-form label {
-            display: block;
-            margin-bottom: 0.5rem;
-            font-weight: bold;
-            font-size: clamp(0.9rem, 2.5vw, 1rem);
-        }
-
-        .contact-form input,
-        .contact-form textarea {
-            width: 100%;
-            padding: 0.6rem;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-bottom: 1rem;
-            box-sizing: border-box;
-            font-size: clamp(0.9rem, 2.5vw, 1rem);
-            font-family: 'Georgia', serif;
-        }
-
-        .contact-form textarea {
-            resize: vertical;
-            min-height: 100px;
-        }
-
-        .contact-form button {
-            background-color: #e67e22;
-            color: white;
-            padding: 0.8rem 1.5rem;
-            border: none;
-            border-radius: 5px;
-            font-size: clamp(0.9rem, 2.5vw, 1rem);
-            cursor: pointer;
-            width: 100%;
-            transition: background-color 0.3s ease;
-        }
-
-        .contact-form button:hover,
-        .contact-form button:focus {
-            background-color: #d35400;
-        }
-
-        /* Mobile-specific adjustments */
-        @media (max-width: 768px) {
-            nav {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-            nav a {
-                width: 80%;
-                text-align: center;
-                margin: 0.3rem 0;
-            }
-            .hero {
-                padding: 100px 1rem;
-            }
-            .grid-container {
-                grid-template-columns: 1fr;
-            }
-            .contact-form {
-                padding: 0 0.5rem;
-                max-width: 100%;
-            }
-            .contact-form input,
-            .contact-form textarea {
-                padding: 0.5rem;
-            }
-            .contact-form button {
-                padding: 0.7rem 1rem;
-            }
-            .newsletter form {
-                flex-direction: column;
-                gap: 0.5rem;
-            }
-            .newsletter input {
-                width: 100%;
-            }
-        }
-
-        @media (max-width: 480px) {
-            header h1 {
-                font-size: 1.5rem;
-            }
-            .hero h2 {
-                font-size: 1.8rem;
-            }
-            .hero p {
-                font-size: 0.9rem;
-            }
-            .content-section {
-                padding: 2rem 0.5rem;
-            }
-            .contact-form label {
-                font-size: 0.9rem;
-            }
-            .contact-form input,
-            .contact-form textarea {
-                font-size: 0.9rem;
-                padding: 0.4rem;
-            }
-            .contact-form textarea {
-                min-height: 80px;
-            }
-            .contact-form button {
-                padding: 0.6rem 1rem;
-                font-size: 0.9rem;
-            }
-            .newsletter h3 {
-                font-size: 1.5rem;
-            }
-        }
-
-        /* Desktop-specific adjustments for larger screens */
-        @media (min-width: 1200px) {
-            .hero {
-                padding: 300px 2rem;
-            }
-            .hero h2 {
-                font-size: 4rem;
-            }
-            .hero p {
-                font-size: 1.5rem;
-            }
-            .hero button {
-                padding: 1rem 2rem;
-                font-size: 1.2rem;
-            }
-        }
-    </style>
-</head>
-<body>
-
-    <header>
-        <h1>Dorpsedeugniet - Artesian Beer Brewing in the Netherlands</h1>
-    </header>
-
-    <nav role="navigation" aria-label="Main navigation">
-        <a href="#home">Home</a>
-        <a href="#beers">Our Beers</a>
-        <a href="#process">Brewing Process</a>
-        <a href="#contact">Contact</a>
-    </nav>
-
-    <div class="breadcrumbs" aria-label="Breadcrumb navigation">
-        <a href="#home">Home</a> &gt; <a href="#beers">Our Beers</a> &gt; <a href="#process">Brewing Process</a> &gt; <a href="#contact">Contact</a>
-    </div>
-
-    <main>
-        <section id="home" class="hero" aria-label="Hero section">
-            <h2>Artesian Beer Brewing in Reeuwijk, Netherlands</h2>
-            <p>Experience the rich flavors of Dorpsedeugniet’s hand-crafted beers, brewed with passion and tradition in the heart of the Netherlands. Our small-batch brewing process in Reeuwijk ensures every sip is a taste of Dutch craftsmanship.</p>
-            <a href="#beers"><button aria-label="Discover our beers">Discover Our Beers</button></a>
-        </section>
-
-        <section id="beers" class="content-section">
-            <h2>Our Exceptional Artesian Beer Brewing Process</h2>
-            <p>We believe in quality over quantity. Our small-batch brewing process in Reeuwijk ensures every beer is crafted with the finest ingredients and meticulous attention to detail, making Dorpsedeugniet a standout in artesian beer brewing in the Netherlands.</p>
-
-            <div class="grid-container">
-                <div class="grid-item">
-                    <img src="beer-with-hops.jpg" alt="Glass of beer with hops for Dorpsedeugniet ingredients" loading="lazy">
-                    <h3>Finest Ingredients</h3>
-                    <p>We source only the best hops, malts, and yeast to create beers of exceptional quality, ensuring every bottle reflects the rich heritage of Dutch brewing.</p>
-                </div>
-                <div class="grid-item">
-                    <img src="brewing-scene.jpg" alt="Brewing scene with beer and wheat at Dorpsedeugniet" loading="lazy">
-                    <h3>Expert Brewing</h3>
-                    <p>Our brewers use time-honored techniques and modern innovation to craft unique and flavorful beers, blending tradition with creativity in Reeuwijk.</p>
-                </div>
-                <div class="grid-item">
-                    <img src="beer-aging-scene.jpg" alt="Beer aging scene with wheat at Dorpsedeugniet" loading="lazy">
-                    <h3>Careful Aging</h3>
-                    <p>We allow our beers to mature, developing their full potential and complex flavor profiles, a hallmark of artesian beer brewing in the Netherlands.</p>
-                </div>
-            </div>
-
-            <!-- Social Sharing Buttons -->
-            <div class="social-share">
-                <p>Share this page:</p>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.dorpsedeugniet.com/" target="_blank" aria-label="Share on Facebook">Facebook</a>
-                <a href="https://twitter.com/intent/tweet?url=https://www.dorpsedeugniet.com/&text=Discover the finest artesian beer brewing in the Netherlands with Dorpsedeugniet!" target="_blank" aria-label="Share on Twitter">Twitter</a>
-                <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.dorpsedeugniet.com/" target="_blank" aria-label="Share on LinkedIn">LinkedIn</a>
-            </div>
-        </section>
-
-        <section id="process" class="content-section">
-            <h2>The Dorpsedeugniet Brewing Process in the Netherlands</h2>
-            <p>From selecting the finest ingredients to the careful aging of our beers, every step of our process is handled with meticulous care and dedication in Reeuwijk, Netherlands. Our artesian brewing techniques ensure that each beer captures the essence of Dutch tradition while offering a modern twist for beer enthusiasts worldwide.</p>
-            <p>Learn more about our <a href="#beers">artesian brewing techniques</a> and what makes our beers stand out. Interested in visiting us? <a href="#contact">Get in touch</a> to arrange a tasting in Reeuwijk!</p>
-        </section>
-
-        <!-- Newsletter Signup Section -->
-        <section class="newsletter">
-            <h3>Stay Updated with Dorpsedeugniet</h3>
-            <p>Join our newsletter to receive updates on new beer releases, events in Reeuwijk, and exclusive offers for artesian beer lovers.</p>
-            <form action="mailto:jaspervdz@me.com" method="post" enctype="text/plain">
-                <input type="email" name="email" placeholder="Enter your email" required aria-required="true">
-                <button type="submit">Subscribe</button>
-            </form>
-        </section>
-
-        <section id="contact" class="content-section">
-            <h2>Contact Dorpsedeugniet</h2>
-            <p>Questions about our artesian beers? Interested in visiting Reeuwijk for a tasting? Reach out to us!</p>
-            <form class="contact-form" action="mailto:jaspervdz@me.com" method="post" enctype="text/plain" aria-label="Contact form">
-                <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required aria-required="true" placeholder="Enter your name">
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required aria-required="true" placeholder="Enter your email">
-
-                <label for="message">Message:</label>
-                <textarea id="message" name="message" rows="4" required aria-required="true" placeholder="Type your message here"></textarea>
-
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2025 Dorpsedeugniet. All rights reserved.</p>
-        <p><a href="/sitemap.xml">Sitemap</a> | <a href="/privacy-policy.html">Privacy Policy</a></p>
-    </footer>
-
-</body>
-</html>
+            "addressLocality": "Reeuwijk
